[project]
name = "virtuosa"
version = "0.1.0"
description = ""
authors = [
    {name = "dnl-strnl",email = "129630837+dnl-strnl@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
mutagen = ">=1.47.0,<2.0.0"
flask = ">=3.1.0,<4.0.0"
torch = ">=2.6.0,<3.0.0"
diffusers = ">=0.32.2,<0.33.0"
soundfile = ">=0.13.1,<0.14.0"
transformers = ">=4.48.2,<5.0.0"
accelerate = ">=1.3.0,<2.0.0"
torchsde = ">=0.2.6,<0.3.0"
numba = "^0.61.0"
openai-whisper = "^20240930"
ollama = "^0.4.7"
langchain-community = "^0.3.16"
chromadb = "^0.6.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
